商品モデルをバックエンド、フロントエンドで合わせる
